<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="kata.calculator.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFF3E0"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name_app"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/fanwood_text"
            android:gravity="center|center_horizontal"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:autoSizeMaxTextSize="100sp"
            app:autoSizeMinTextSize="5sp"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/go_to_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custombutton"
            android:fontFamily="@font/fanwood_text"
            android:gravity="center|center_horizontal"
            android:shadowColor="#00000000"
            android:text="@string/go_to_next_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/step_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_step_view" />

            <RadioGroup
                android:id="@+id/r_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/r01"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:text="@string/step_01" />

                <RadioButton
                    android:id="@+id/r025"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_025" />

                <RadioButton
                    android:id="@+id/r05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_05" />

                <RadioButton
                    android:id="@+id/r1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_1" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="229dp"
            tools:layout_editor_absoluteY="196dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from_table" />

            <EditText
                android:id="@+id/edit_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:text="@string/from_le" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_table" />

            <EditText
                android:id="@+id/edit_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:text="@string/to_le" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>